--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -14,12 +14,10 @@ body {
 	<!-- Bitte keine Änderung in der obenstehenden Zeile vornehmen -->
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
 	
-<a href="Datenadresse eintragen" target="_blank">Aufgabe 1a, 1.1.2015</a><br>
-und diese -->
 
 	<!-- Hier bitte die Vorkenntnisse im Bereich Programmierung zu Beginn der Veranstaltung kurz beschreiben! -->
 	<hr>
-	Vorkenntnisse: HTML,CSS
+	Vorkenntnisse: HTML,CSS,TypeScript
 
 	<!-- Bitte keine Änderung in der folgenden Zeile vornehmen -->
 </body>
