--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -17,7 +17,7 @@ body {
 
 	<!-- Hier bitte die Vorkenntnisse im Bereich Programmierung zu Beginn der Veranstaltung kurz beschreiben! -->
 	<hr>
-	Vorkenntnisse: HTML,CSS,TypeScript
+	Vorkenntnisse: EIA1
 
 	<!-- Bitte keine Änderung in der folgenden Zeile vornehmen -->
 </body>
