--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -16,7 +16,7 @@ body {
 	
 	<!-- Aufgabe 0 -->
 	<a href="https://theresagut.github.io" target="_blank">Userpage</a>
-	
+	<a href="https://github.com/theresagut" target="_blank">Repository</a>
 
 	<!-- Hier bitte die Vorkenntnisse im Bereich Programmierung zu Beginn der Veranstaltung kurz beschreiben! -->
 	<hr>
