--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -17,6 +17,8 @@ body {
 	<!-- Aufgabe 0 -->
 	<a href="https://theresagut.github.io" target="_blank">Userpage</a>
 	<a href="https://github.com/theresagut" target="_blank">Repository</a>
+	<a href="https://github.com/theresagut/EIA2" target="_blank">Projectpage</a>
+	
 
 	<!-- Hier bitte die Vorkenntnisse im Bereich Programmierung zu Beginn der Veranstaltung kurz beschreiben! -->
 	<hr>
