--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -18,7 +18,7 @@ body {
 	<a href="https://theresagut.github.io" target="_blank">Userpage</a>
 	<a href="https://github.com/theresagut" target="_blank">Repository</a>
 	<a href="https://github.com/theresagut/EIA2" target="_blank">Projectpage</a>
-	
+	<a href="https://theresagut.github.io/EIA2/0Aufgabe/aufgabe0.html" target="_blank">Aufgabe0</a>
 
 	<!-- Hier bitte die Vorkenntnisse im Bereich Programmierung zu Beginn der Veranstaltung kurz beschreiben! -->
 	<hr>
