Verlinkung richtig geordnet

--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -15,10 +15,12 @@ body {
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
 	
 	<!-- Aufgabe 0 -->
+	<a href="https://theresagut.github.io/EIA2/0Aufgabe/aufgabe0.html" target="_blank">Aufgabe 0, 09.10.18</a>
+	<br>
 	<a href="https://theresagut.github.io" target="_blank">Userpage</a>
 	<a href="https://github.com/theresagut" target="_blank">Repository</a>
 	<a href="https://github.com/theresagut/EIA2" target="_blank">Projectpage</a>
-	<a href="https://theresagut.github.io/EIA2/0Aufgabe/aufgabe0.html" target="_blank">Aufgabe0</a>
+	
 
 	<!-- Hier bitte die Vorkenntnisse im Bereich Programmierung zu Beginn der Veranstaltung kurz beschreiben! -->
 	<hr>
