--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -14,14 +14,15 @@ body {
 	<!-- Bitte keine Änderung in der obenstehenden Zeile vornehmen -->
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
 	
-	<!-- Aufgabe 1 -->
-	<a href="https://theresagut.github.io/EIA2/1Aufgabe/Aufgabe1.2.pdf">Aufgabe 1, 15.10.18</a>
 	
-	<!-- Aufgabe 0 -->
+	<!-- Verlinkungen -->
 	<a href="https://theresagut.github.io" target="_blank">Userpage</a>
 	<a href="https://github.com/theresagut" target="_blank">Repository</a>
 	<a href="https://github.com/theresagut/EIA2" target="_blank">Projectpage</a>
 	<hr>
+	<!-- Aufgabe 1 -->
+	<a href="https://theresagut.github.io/EIA2/1Aufgabe/Aufgabe1.2.pdf">Aufgabe 1, 15.10.18</a>
+	<!-- Aufgabe 0 -->
 	<a href="https://theresagut.github.io/EIA2/0Aufgabe/aufgabe0.html" target="_blank">Aufgabe 0, 09.10.18</a>
 
 	
