Verbesserung Konzept hochladen

--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -20,7 +20,10 @@ body {
 	<a href="https://github.com/theresagut" target="_blank">Repository</a>
 	<a href="https://github.com/theresagut/EIA2" target="_blank">Projectpage</a>
 	<hr>
+	<!-- Aufgabe 2 -->
+	
 	<!-- Aufgabe 1 -->
+	<a href="https://theresagut.github.io/EIA2/1Aufgabe/Konzept_Verbsserung.pdf">Aufgabe 1 verbessert, 21.10.18</a>
 	<a href="https://theresagut.github.io/EIA2/1Aufgabe/Aufgabe1.2.pdf">Aufgabe 1, 15.10.18</a>
 	<br>
 	<!-- Aufgabe 0 -->
