--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -21,6 +21,8 @@ body {
 	<a href="https://github.com/theresagut/EIA2" target="_blank">Projectpage</a>
 	<hr>
 	<!-- Aufgabe 2 -->
+	<a href="https://theresagut.github.io/EIA2/2Aufgabe/aufgabe2.html">Aufgabe 2, 21.10.18</a>
+	<br>
 	<a href="https://theresagut.github.io/EIA2/2Aufgabe/UNO_Konzept.pdf">Aufgabe 2 Konzept, 21.10.18</a>
 	<br>
 	<!-- Aufgabe 1 -->
