--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -21,14 +21,14 @@ body {
 	<a href="https://github.com/theresagut/EIA2" target="_blank">Projectpage</a>
 	<hr>
 	<!-- Aufgabe 2 -->
-	<a href="https://theresagut.github.io/EIA2/2Aufgabe/aufgabe2.html">Aufgabe 2, 21.10.18</a>
+	<a href="https://theresagut.github.io/EIA2/2Aufgabe/aufgabe2.html" target="_blank">Aufgabe 2, 21.10.18</a>
 	<br>
-	<a href="https://theresagut.github.io/EIA2/2Aufgabe/UNO_Konzept.pdf">Aufgabe 2 Konzept, 21.10.18</a>
+	<a href="https://theresagut.github.io/EIA2/2Aufgabe/UNO_Konzept.pdf" target="_blank">Aufgabe 2 Konzept, 21.10.18</a>
 	<br>
 	<!-- Aufgabe 1 -->
-	<a href="https://theresagut.github.io/EIA2/1Aufgabe/Konzept_Verbsserung.pdf">Aufgabe 1 verbessert, 21.10.18</a>
+	<a href="https://theresagut.github.io/EIA2/1Aufgabe/Konzept_Verbsserung.pdf" target="_blank">Aufgabe 1 verbessert, 21.10.18</a>
 	<br>
-	<a href="https://theresagut.github.io/EIA2/1Aufgabe/Aufgabe1.2.pdf">Aufgabe 1, 15.10.18</a>
+	<a href="https://theresagut.github.io/EIA2/1Aufgabe/Aufgabe1.2.pdf" target="_blank">Aufgabe 1, 15.10.18</a>
 	<br>
 	<!-- Aufgabe 0 -->
 	<a href="https://theresagut.github.io/EIA2/0Aufgabe/aufgabe0.html" target="_blank">Aufgabe 0, 09.10.18</a>
