cows in steckbrief

--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -26,6 +26,8 @@ body {
 	<a href="https://theresagut.github.io/EIA2/2Aufgabe/UNO_Konzept.pdf" target="_blank">Aufgabe 2 Konzept, 21.10.18</a>
 	<br>
 	<!-- Aufgabe 1 -->
+	<a href="https://theresagut.github.io/EIA2/1Aufgabe/Cows_TT.pdf" target="_blank">Aufgabe 1 Cows, 21.10.18</a>
+	<br>
 	<a href="https://theresagut.github.io/EIA2/1Aufgabe/Konzept_Verbsserung.pdf" target="_blank">Aufgabe 1 verbessert, 21.10.18</a>
 	<br>
 	<a href="https://theresagut.github.io/EIA2/1Aufgabe/Aufgabe1.2.pdf" target="_blank">Aufgabe 1, 15.10.18</a>
