kozept hochladen in steckbrief

--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -14,7 +14,7 @@ body {
 	<!-- Bitte keine Änderung in der obenstehenden Zeile vornehmen -->
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
 	<a href="https://theresagut.github.io/EIA2/endabgabe/Abschlussaufgabe.html" target="_blank">Endababgabe :-) </a><br>
-	
+	<a href="https://theresagut.github.io/EIA2/endabgabe/Konzept-Endabgabe.pdf" target="_blank">Konzept :-) </a><br>
 	<!-- Verlinkungen -->
 
 	<!-- Hier bitte die Vorkenntnisse im Bereich Programmierung zu Beginn der Veranstaltung kurz beschreiben! -->
