--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -13,10 +13,12 @@ body {
 <body>
 	<!-- Bitte keine Änderung in der obenstehenden Zeile vornehmen -->
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
+	<a href="https://github.com/theresagut/EIA2" target="_blank">Repository</a><br>
 	<a href="https://theresagut.github.io/EIA2/L1/01aufgabe.pdf" target="_blank">Aufgabe 1 </a><br>
-	<a href="https://theresagut.github.io/EIA2/endabgabe/Abschlussaufgabe.html" target="_blank">Endababgabe :-) </a><br>
+	
+	<!-- <a href="https://theresagut.github.io/EIA2/endabgabe/Abschlussaufgabe.html" target="_blank">Endababgabe :-) </a><br>
 	<a href="https://theresagut.github.io/EIA2/endabgabe/Konzept-Endabgabe.pdf" target="_blank">Konzept :-) </a><br>
-	<!-- Verlinkungen -->
+	 Verlinkungen -->
 
 	<!-- Hier bitte die Vorkenntnisse im Bereich Programmierung zu Beginn der Veranstaltung kurz beschreiben! -->
 	<hr>
