--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -15,6 +15,7 @@ body {
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
 
 	<a href="https://github.com/theresagut/EIA2" target="_blank">Repository</a><br>
+	<a href="https://theresagut.github.io/EIA2/L2/memory.html" target="_blank">Aufgabe 2 Code (katjas) </a><br>
 	<a href="https://theresagut.github.io/EIA2/L2/diagramme.pdf" target="_blank">Aufgabe 2 diagramme </a><br>
 	<a href="https://theresagut.github.io/EIA2/L1/01aufgabe.pdf" target="_blank">Aufgabe 1 </a><br>
 	
