link fixen ich dödel

--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -14,7 +14,7 @@ body {
 	<!-- Bitte keine Änderung in der obenstehenden Zeile vornehmen -->
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
 	<a href="https://github.com/theresagut/EIA2" target="_blank">Repository</a><br>
-	<a href="https://github.com/theresagut/EIA2/blob/master/L06/Konzept_L6.pdf" target="_blank">Aufgabe 6 Diagramme</a><br>
+	<a href="https://theresagut.github.io/EIA2/L06/Konzept_L6.pdf" target="_blank">Aufgabe 6 Diagramme</a><br>
 	<a href="https://theresagut.github.io/EIA2/L5/Konzept_complete_copy_V.Schwan.pdf" target="_blank">Aufgabe 5 Diagramme</a><br>
 	<a href="https://theresagut.github.io/EIA2/L5/haushaltshilfe_L05.html" target="_blank">Aufgabe 5 Code (copy) </a><br>
 	<a href="https://theresagut.github.io/EIA2/L4/Konzeption_L04_DataStructures.pdf" target="_blank">Aufgabe 4 Diagramme</a><br>
