--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -14,6 +14,10 @@ body {
 	<!-- Bitte keine Änderung in der obenstehenden Zeile vornehmen -->
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
 	<a href="https://github.com/theresagut/EIA2" target="_blank">Repository</a><br>
+	<a href="https://theresagut.github.io/EIA2/L9/Aufgabe9.pdf" target="_blank" >Aufgabe 9 Konzept</a><br>
+	<a href="https://theresagut.github.io/EIA2/L9/main.html" target="_blank" >Aufgabe 9 Code</a><br>
+	<a href="https://theresagut.github.io/EIA2/L8/A08.pdf" target="_blank" >Aufgabe 8 Konzept</a><br>
+	<a href="https://theresagut.github.io/EIA2/L8/aufgabe8.html" target="_blank" >Aufgabe 8 Code</a><br>
 	<a href="https://theresagut.github.io/EIA2/L06/Index.html" target="_blank">Aufgabe 7 Code (copy)</a><br>
 	<a href="https://theresagut.github.io/EIA2/L7/aktivitaetsdiagramm_l7.pdf" target="_blank">Aufgabe 7 Diagramme</a><br>
 	<a href="https://theresagut.github.io/EIA2/L06/Index.html" target="_blank">Aufgabe 6 Code (copy)</a><br>
