--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -14,6 +14,8 @@ body {
 	<!-- Bitte keine Änderung in der obenstehenden Zeile vornehmen -->
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
 	<a href="https://github.com/theresagut/EIA2" target="_blank">Repository</a><br>
+	<a href="https://theresagut.github.io/EIA2/L10/L10.pdf" target="_blank" >Aufgabe 10 Konzept Kopiert</a><br>
+	<a href="https://theresagut.github.io/EIA2/L10/L10_Virus.html" target="_blank" >Aufgabe 10 Code Kopiert</a><br>
 	<a href="https://theresagut.github.io/EIA2/L9/Aufgabe9.pdf" target="_blank" >Aufgabe 9 Konzept</a><br>
 	<a href="https://theresagut.github.io/EIA2/L9/main.html" target="_blank" >Aufgabe 9 Code</a><br>
 	<a href="https://theresagut.github.io/EIA2/L8/A08.pdf" target="_blank" >Aufgabe 8 Konzept</a><br>
