--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -13,8 +13,10 @@ body {
 <body>
 	<!-- Bitte keine Änderung in der obenstehenden Zeile vornehmen -->
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
+	<hr> Nur hier für die Endabgabe 
+
 	<a href="https://github.com/theresagut/EIA2" target="_blank">Repository</a><br>
-	<a href="https://theresagut.github.io/EIA2/L10/L10.pdf" target="_blank" >Aufgabe 10 Konzept Kopiert</a><br>
+	<a href="https://theresagut.github.io/EIA2/endabgabe.html" target="_blank" >Aufgabe 10 Konzept Kopiert</a><br>
 	<a href="https://theresagut.github.io/EIA2/L10/L10_Virus.html" target="_blank" >Aufgabe 10 Code Kopiert</a><br>
 	
 	<!-- <a href="https://theresagut.github.io/EIA2/endabgabe/Abschlussaufgabe.html" target="_blank">Endababgabe :-) </a><br>
