update steckbiref verlinkungen

--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -16,8 +16,8 @@ body {
 	<hr> Nur hier für die Endabgabe 
 
 	<a href="https://github.com/theresagut/EIA2" target="_blank">Repository</a><br>
-	<a href="https://theresagut.github.io/EIA2/endabgabe.html" target="_blank" >Aufgabe 10 Konzept Kopiert</a><br>
-	<a href="https://theresagut.github.io/EIA2/L10/L10_Virus.html" target="_blank" >Aufgabe 10 Code Kopiert</a><br>
+	<a href="https://theresagut.github.io/EIA2/endabgabe.html" target="_blank" >Endabgabe</a><br>
+	<!-- <a href="https://theresagut.github.io/EIA2/L10/L10_Virus.html" target="_blank" >Endabagbe Konzept</a><br> -->
 	
 	<!-- <a href="https://theresagut.github.io/EIA2/endabgabe/Abschlussaufgabe.html" target="_blank">Endababgabe :-) </a><br>
 	<a href="https://theresagut.github.io/EIA2/endabgabe/Konzept-Endabgabe.pdf" target="_blank">Konzept :-) </a><br>
