--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -13,7 +13,7 @@ body {
 <body>
 	<!-- Bitte keine Änderung in der obenstehenden Zeile vornehmen -->
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
-	<hr> Nur hier für die Endabgabe 
+	<hr> Nur hier für die Endabgabe <br>
 
 	<a href="https://github.com/theresagut/EIA2" target="_blank">Repository</a><br>
 	<a href="https://theresagut.github.io/EIA2/endabgabe.html" target="_blank" >Endabgabe</a><br>
