abschlussaufgabe verlinken im Steckbrief

--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -1,32 +1,34 @@
 <!DOCTYPE html>
 <html>
 <title>Steckbrief</title>
-<head>
-<style>
-body {
-	font-family: arial;
-	font-size: small;
-	background: #eeeeee
-}
-</style>
-</head>
-<body>
-	<!-- Bitte keine Änderung in der obenstehenden Zeile vornehmen -->
-	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
-	<hr> Nur hier für die Endabgabe <br>
 
-	<a href="https://github.com/theresagut/EIA2" target="_blank">Repository</a><br>
-	<a href="https://theresagut.github.io/EIA2/endabgabe.html" target="_blank" >Endabgabe</a><br>
-	<!-- <a href="https://theresagut.github.io/EIA2/L10/L10_Virus.html" target="_blank" >Endabagbe Konzept</a><br> -->
-	
-	<!-- <a href="https://theresagut.github.io/EIA2/endabgabe/Abschlussaufgabe.html" target="_blank">Endababgabe :-) </a><br>
+<head>
+    <style>
+        body {
+            font-family: arial;
+            font-size: small;
+            background: #eeeeee
+        }
+    </style>
+</head>
+
+<body>
+    <!-- Bitte keine Änderung in der obenstehenden Zeile vornehmen -->
+    <!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
+    <hr> Nur hier für die Endabgabe <br>
+
+    <a href="https://github.com/theresagut/EIA2" target="_blank">Repository</a><br>
+    <a href="https://theresagut.github.io/Endabgabe/code/Abschlussaufgabe.html" target="_blank">Endabgabe</a><br>
+    <!-- <a href="https://theresagut.github.io/EIA2/L10/L10_Virus.html" target="_blank" >Endabagbe Konzept</a><br> -->
+
+    <!-- <a href="https://theresagut.github.io/EIA2/endabgabe/Abschlussaufgabe.html" target="_blank">Endababgabe :-) </a><br>
 	<a href="https://theresagut.github.io/EIA2/endabgabe/Konzept-Endabgabe.pdf" target="_blank">Konzept :-) </a><br>
 	 Verlinkungen -->
 
-	<!-- Hier bitte die Vorkenntnisse im Bereich Programmierung zu Beginn der Veranstaltung kurz beschreiben! -->
-	<hr>
-	Vorkenntnisse: EIA1
+    <!-- Hier bitte die Vorkenntnisse im Bereich Programmierung zu Beginn der Veranstaltung kurz beschreiben! -->
+    <hr> Vorkenntnisse: EIA1
 
-	<!-- Bitte keine Änderung in der folgenden Zeile vornehmen -->
+    <!-- Bitte keine Änderung in der folgenden Zeile vornehmen -->
 </body>
+
 </html>
