--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -17,7 +17,7 @@
     <!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
     <hr> Nur hier für die Endabgabe <br>
 
-    <a href="https://github.com/theresagut/EIA2" target="_blank">Repository</a><br>
+    <a href="https://github.com/theresagut" target="_blank">Repository</a><br>
     <a href="https://theresagut.github.io/Endabgabe/code/Abschlussaufgabe.html" target="_blank">Endabgabe</a><br>
     <!-- <a href="https://theresagut.github.io/EIA2/L10/L10_Virus.html" target="_blank" >Endabagbe Konzept</a><br> -->
 
