--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -18,7 +18,7 @@
     <hr> Nur hier für die Endabgabe <br>
 
     <a href="https://github.com/theresagut" target="_blank">Repository</a><br>
-    <a href="https://theresagut.github.io/Endabgabe/code/Abschlussaufgabe.html" target="_blank">Endabgabe</a><br>
+    <a href="https://theresagut.github.io/Endabgabe/code/index.html" target="_blank">Endabgabe</a><br>
     <!-- <a href="https://theresagut.github.io/EIA2/L10/L10_Virus.html" target="_blank" >Endabagbe Konzept</a><br> -->
 
     <!-- <a href="https://theresagut.github.io/EIA2/endabgabe/Abschlussaufgabe.html" target="_blank">Endababgabe :-) </a><br>
