--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -19,7 +19,7 @@
 
     <a href="https://github.com/theresagut" target="_blank">Repository</a><br>
     <a href="https://theresagut.github.io/Endabgabe/code/index.html" target="_blank">Endabgabe</a><br>
-    <!-- <a href="https://theresagut.github.io/EIA2/L10/L10_Virus.html" target="_blank" >Endabagbe Konzept</a><br> -->
+    <a href="https://theresagut.github.io/Endabgabe/concepts" target="_blank">Endabagbe Konzept</a><br>
 
     <!-- <a href="https://theresagut.github.io/EIA2/endabgabe/Abschlussaufgabe.html" target="_blank">Endababgabe :-) </a><br>
 	<a href="https://theresagut.github.io/EIA2/endabgabe/Konzept-Endabgabe.pdf" target="_blank">Konzept :-) </a><br>
