neues repository hinzufügen

--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -17,7 +17,7 @@
     <!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
     <hr> Nur hier für die Endabgabe <br>
 
-    <a href="https://github.com/theresagut" target="_blank">Repository</a><br>
+    <a href="https://github.com/theresagut/Endabgabe" target="_blank">Repository</a><br>
     <a href="https://theresagut.github.io/Endabgabe/code/index.html" target="_blank">Endabgabe</a><br>
     <a href="https://theresagut.github.io/Endabgabe/concepts" target="_blank">Endabagbe Konzept</a><br>
 
