Konzepte für endabgabe verlinken

--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -19,7 +19,7 @@
 
     <a href="https://github.com/theresagut/Endabgabe" target="_blank">Repository</a><br>
     <a href="https://theresagut.github.io/Endabgabe/code/index.html" target="_blank">Endabgabe</a><br>
-    <a href="https://theresagut.github.io/Endabgabe/concepts" target="_blank">Endabagbe Konzept</a><br>
+    <a href="https://theresagut.github.io/Endabgabe/Theresa-Gut-Diagramme.pdf" target="_blank">Endabagbe Konzepte + Anleitungen</a><br>
 
     <!-- <a href="https://theresagut.github.io/EIA2/endabgabe/Abschlussaufgabe.html" target="_blank">Endababgabe :-) </a><br>
 	<a href="https://theresagut.github.io/EIA2/endabgabe/Konzept-Endabgabe.pdf" target="_blank">Konzept :-) </a><br>
