--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -20,7 +20,7 @@
     <a href="https://github.com/theresagut/Endabgabe" target="_blank">Repository</a><br>
     <a href="https://theresagut.github.io/Endabgabe/code/index.html" target="_blank">Endabgabe</a><br>
     <a href="https://theresagut.github.io/Endabgabe/Theresa-Gut-Diagramme.pdf" target="_blank">Endabagbe Konzepte + Anleitungen</a><br>
-
+    <a href="https://theresagut.github.io/Endabgabe/Archiv.zip" target="_blank">Zip Ordner</a>
     <!-- <a href="https://theresagut.github.io/EIA2/endabgabe/Abschlussaufgabe.html" target="_blank">Endababgabe :-) </a><br>
 	<a href="https://theresagut.github.io/EIA2/endabgabe/Konzept-Endabgabe.pdf" target="_blank">Konzept :-) </a><br>
 	 Verlinkungen -->
